PDS-526: Updated to report friendlier error messages when schemas and schematrons could not be resolved through the catalog.
git-svn-id: https://starcell.jpl.nasa.gov/repo/2010/trunk@16348 45d5965c-88be-4637-9056-144873d6cd01